compat: fix badge z-index in Edge

--- a/assets/site/frontpage.sass
+++ b/assets/site/frontpage.sass
@@ -207,7 +207,7 @@ html.front-page
     position: absolute
     right: 3em
     top: calc(-8rem + 1vw)
-    z-index: 10
+    z-index: 100
     line-height: 1.4
     text-align: center
     font-size: 0.85rem
